--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@
 
     <main id="resume">
 
-        <object data="Resume/resume.pdf" type="application/pdf"
+        <object data="Resume/Resume.pdf" type="application/pdf"
                 style="position:absolute; top:0; bottom:0; left: 0; right:0; width:100%; height:100%">
             <p>Resume failed to load</p>
         </object>
