Updated Resume, added icons, completed majority

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Chase Poland Portfolio">
     <title>My Portfolio</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -70,20 +71,38 @@
 
 <!-- Technology Stack Section -->
 <section id="tech-stack" class="full-page">
-    <div class="content-box">
+    <div class="content-box tech-box">
         <h2>Technology Stack</h2>
-        <p>OK I KNOW it looks bland.. I'll put icons here i think</p>
+        <div class="tech-icons">
+            <img src="TechStack/Java.svg" alt="Java">
+            <img src="TechStack/Python.svg" alt="Python">
+            <img src="TechStack/C.svg" alt="C">
+            <img src="TechStack/C++.svg" alt="C++">
+            <img src="TechStack/C%23.svg" alt="C#">
+            <img src="TechStack/CSS3.svg" alt="CSS3">
+            <img src="TechStack/HTML5.svg" alt="HTML5">
+            <img src="TechStack/JavaScript.svg" alt="JavaScript">
+            <img src="TechStack/Node.js.svg" alt="Node">
+            <img src="TechStack/SQL%20Developer.svg" alt="SQL">
+            <img src="TechStack/AWS.svg" alt="AWS">
+            <img src="TechStack/Azure%20SQL%20Database.svg" alt="Azure">
+            <img src="TechStack/Git.svg" alt="Git">
+        </div>
     </div>
 </section>
 
 <!-- Contact Me Section -->
-<section id="contact" class="full-page">
-    <div class="content-box">
+<section id="contact-me" class="full-page">
+    <div class="content-box contact-box">
         <h2>Contact Me</h2>
-        <p>Debating how to do this.. Container + Icon Hyperlinks? Or just put it in the footer maybe.</p>
-        <p>Email: chase.poland@gmail.com</p>
+        <p>Email: <a href="mailto:chase.poland@gmail.com">chase.poland@gmail.com</a></p>
+        <div class="contact-icons">
+            <a href="https://www.linkedin.com/in/chase-poland-b6b27991/" target="_blank"><img src="ContactMe/LinkedIn.svg" alt="LinkedIn"></a>
+            <a href="mailto:chase.poland@gmail.com"><img src="ContactMe/Gmail.svg" alt="Gmail"></a>
+        </div>
     </div>
 </section>
+
 
 <footer>
     <p>&copy; 2024 Chase Poland</p>
