--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <script src="custom.js"></script>
 <script>
     function downloadResume() {
-        window.location.href = 'Resume/Resume.pdf';  // Update this path to your actual resume file
+        window.location.href = 'Resume/Resume.pdf';
     }
 </script>
 
