Fix contact me link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <ul>
                         <li><a href="#projects">Projects</a></li>
                         <li><a href="#tech-stack">Technology Stack</a></li>
-                        <li><a href="#contact">Contact Me</a></li>
+                        <li><a href="#contact-me">Contact Me</a></li>
                         <li><button onclick="downloadResume()">Download Resume</button></li>
                     </ul>
                 </nav>
