Added new container and hover tooltip for Tech Stack imgs so that people know what language is tied to the icon.

--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
     <div class="content-box tech-box">
         <h2>Technology Stack</h2>
         <div class="tech-icons">
-            <img src="TechStack/Java.svg" alt="Java">
-            <img src="TechStack/Python.svg" alt="Python">
-            <img src="TechStack/C.svg" alt="C">
-            <img src="TechStack/C++.svg" alt="C++">
-            <img src="TechStack/C%23.svg" alt="C#">
-            <img src="TechStack/CSS3.svg" alt="CSS3">
-            <img src="TechStack/HTML5.svg" alt="HTML5">
-            <img src="TechStack/JavaScript.svg" alt="JavaScript">
-            <img src="TechStack/Node.js.svg" alt="Node">
-            <img src="TechStack/SQL%20Developer.svg" alt="SQL">
-            <img src="TechStack/AWS.svg" alt="AWS">
-            <img src="TechStack/Azure%20SQL%20Database.svg" alt="Azure">
-            <img src="TechStack/Git.svg" alt="Git">
+            <span class="tech-icon-wrapper" data-tooltip="Java"><img src="TechStack/Java.svg" alt="Java"></span>
+            <span class="tech-icon-wrapper" data-tooltip="Python"><img src="TechStack/Python.svg" alt="Python"></span>
+            <span class="tech-icon-wrapper" data-tooltip="C"><img src="TechStack/C.svg" alt="C"></span>
+            <span class="tech-icon-wrapper" data-tooltip="C++"><img src="TechStack/C++.svg" alt="C++"></span>
+            <span class="tech-icon-wrapper" data-tooltip="C#"><img src="TechStack/C%23.svg" alt="C#"></span>
+            <span class="tech-icon-wrapper" data-tooltip="CSS3"><img src="TechStack/CSS3.svg" alt="CSS3"></span>
+            <span class="tech-icon-wrapper" data-tooltip="HTML5"><img src="TechStack/HTML5.svg" alt="HTML5"></span>
+            <span class="tech-icon-wrapper" data-tooltip="JavaScript"><img src="TechStack/JavaScript.svg" alt="JavaScript"></span>
+            <span class="tech-icon-wrapper" data-tooltip="Node.js"><img src="TechStack/Node.js.svg" alt="Node"></span>
+            <span class="tech-icon-wrapper" data-tooltip="SQL"><img src="TechStack/SQL%20Developer.svg" alt="SQL"></span>
+            <span class="tech-icon-wrapper" data-tooltip="AWS"><img src="TechStack/AWS.svg" alt="AWS"></span>
+            <span class="tech-icon-wrapper" data-tooltip="Azure"><img src="TechStack/Azure%20SQL%20Database.svg" alt="Azure"></span>
+            <span class="tech-icon-wrapper" data-tooltip="Git"><img src="TechStack/Git.svg" alt="Git"></span>
         </div>
     </div>
 </section>
